<rdar://problem/7488126> With text-rendering: optimizelegibility, sometimes lines run too long https://bugs.webkit.org/show_bug.cgi?id=32794

Reviewed by Sam Weinig.

WebCore:

Test: platform/mac/fast/text/line-breaking-with-kerning.html

* rendering/RenderBlockLineLayout.cpp:
(WebCore::RenderBlock::findNextLineBreak): When kerning is enabled, include
the trailing space when measuring a word, then subtract its width. This
accounts for kerning between the last glyph of the word and the following space.

LayoutTests:

* platform/mac/fast/text/line-breaking-with-kerning-expected.checksum: Added.
* platform/mac/fast/text/line-breaking-with-kerning-expected.png: Added.
* platform/mac/fast/text/line-breaking-with-kerning-expected.txt: Added.
* platform/mac/fast/text/line-breaking-with-kerning.html: Added.



Canonical link: https://commits.webkit.org/44301@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52889 268f45cc-cd09-0410-ab3c-d52691b4dbfc